--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ defaultContentLanguage = "en"
 theme = "hugo-scroll"
 
 # The browser tab name
-title = "Global Hackathon | Science"
+title = "Global Hackathon | HK25"
 
 # In order to add version information in the page's footer set to true.
 # enableGitInfo = true
@@ -35,7 +35,7 @@ title = "Global Hackathon | Science"
     # Another "title" :-). This one is used as the site_name on the Hugo's internal
     # opengraph structured data template.
     # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-    title = "Global Hackathon - Science"
+    title = "Global Hackathon"
 
     # The "description" of your website. This is used in the meta data of your generated html.
     description = "Digital Earths Global Hackathon 12th to 17th May 2025"
