--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ title = "Global Hackathon | HK25"
     title = "Global Hackathon"
 
     # The "description" of your website. This is used in the meta data of your generated html.
-    description = "Digital Earths Global Hackathon 12th to 17th May 2025"
+    description = "Digital Earths Global Hackathon 12th to 16th May 2025 [UTC]"
 
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Plain HTML is supported in here as well. So you may e.g. add a link to your legal imprint-page.
